// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<PersonalDetailsForm> > Renders with errors 1`] = `
<div>
  <form
    data-testid="personal_details-form"
    novalidate=""
  >
    <h2
      class="_title_8a9484"
    >
      personal_details.title
    </h2>
    <div
      class="_formField_86f2f5 _textField_c799b0"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_firstname"
      >
        personal_details.fist_name
        <span
          aria-hidden="true"
        >
          *
        </span>
      </label>
      <div
        class="_container_859b20"
      >
        <input
          aria-describedby="helper_text_1235_firstname"
          aria-invalid="false"
          aria-required="true"
          autocomplete="given-name"
          class="_input_859b20"
          id="text-field_1235_firstname"
          name="firstName"
          placeholder="personal_details.fist_name"
          required=""
          type="text"
          value="Vince"
        />
      </div>
    </div>
    <div
      class="_formField_86f2f5 _textField_c799b0"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_lastname"
      >
        personal_details.last_name
        <span
          aria-hidden="true"
        >
          *
        </span>
      </label>
      <div
        class="_container_859b20"
      >
        <input
          aria-describedby="helper_text_1235_lastname"
          aria-invalid="false"
          aria-required="true"
          autocomplete="family-name"
          class="_input_859b20"
          id="text-field_1235_lastname"
          name="lastName"
          placeholder="personal_details.last_name"
          required=""
          type="text"
          value="Guy"
        />
      </div>
    </div>
    <div
      class="_formField_86f2f5 _textField_c799b0"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_companyname"
      >
        personal_details.company_name
      </label>
      <div
        class="_container_859b20"
      >
        <input
          aria-describedby="helper_text_1235_companyname"
          aria-invalid="false"
          aria-required="false"
          autocomplete="organization"
          class="_input_859b20"
          id="text-field_1235_companyname"
          name="companyName"
          placeholder="personal_details.company_name"
          type="text"
          value="JW Player"
        />
      </div>
    </div>
    <div
      class="_formField_86f2f5 _textField_c799b0"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_address"
      >
        personal_details.address
        <span
          aria-hidden="true"
        >
          *
        </span>
      </label>
      <div
        class="_container_859b20"
      >
        <input
          aria-describedby="helper_text_1235_address"
          aria-invalid="false"
          aria-required="true"
          autocomplete="address-line1"
          class="_input_859b20"
          id="text-field_1235_address"
          name="address"
          placeholder="personal_details.address"
          required=""
          type="text"
          value="123 Nowhere St."
        />
      </div>
    </div>
    <div
      class="_formField_86f2f5 _textField_c799b0"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_address2"
      >
        personal_details.address2
      </label>
      <div
        class="_container_859b20"
      >
        <input
          aria-describedby="helper_text_1235_address2"
          aria-invalid="false"
          aria-required="false"
          autocomplete="address-line2"
          class="_input_859b20"
          id="text-field_1235_address2"
          name="address2"
          placeholder="personal_details.address2"
          type="text"
          value="Apt 1W"
        />
      </div>
    </div>
    <div
      class="_formField_86f2f5 _textField_c799b0"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_city"
      >
        personal_details.city
        <span
          aria-hidden="true"
        >
          *
        </span>
      </label>
      <div
        class="_container_859b20"
      >
        <input
          aria-describedby="helper_text_1235_city"
          aria-invalid="false"
          aria-required="true"
          autocomplete="address-level2"
          class="_input_859b20"
          id="text-field_1235_city"
          name="city"
          placeholder="personal_details.city"
          required=""
          type="text"
          value="Chicago"
        />
      </div>
    </div>
    <div
      class="_formField_86f2f5 _textField_c799b0"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_state"
      >
        personal_details.state
        <span
          aria-hidden="true"
        >
          *
        </span>
      </label>
      <div
        class="_container_859b20"
      >
        <input
          aria-describedby="helper_text_1235_state"
          aria-invalid="false"
          aria-required="true"
          autocomplete="address-level1"
          class="_input_859b20"
          id="text-field_1235_state"
          name="state"
          placeholder="personal_details.state"
          required=""
          type="text"
          value="IL"
        />
      </div>
    </div>
    <div
      class="_formField_86f2f5 _textField_c799b0"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_postcode"
      >
        personal_details.post_code
        <span
          aria-hidden="true"
        >
          *
        </span>
      </label>
      <div
        class="_container_859b20"
      >
        <input
          aria-describedby="helper_text_1235_postcode"
          aria-invalid="false"
          aria-required="true"
          autocomplete="postal-code"
          class="_input_859b20"
          id="text-field_1235_postcode"
          name="postCode"
          placeholder="personal_details.post_code"
          required=""
          type="text"
          value="60601"
        />
      </div>
    </div>
    <div
      class="_formField_86f2f5 _textField_c799b0"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_phonenumber"
      >
        personal_details.phone_number
        <span
          aria-hidden="true"
        >
          *
        </span>
      </label>
      <div
        class="_container_859b20"
      >
        <input
          aria-describedby="helper_text_1235_phonenumber"
          aria-invalid="false"
          aria-required="true"
          class="_input_859b20"
          id="text-field_1235_phonenumber"
          name="phoneNumber"
          placeholder="personal_details.phone_number"
          required=""
          type="text"
          value="+1 555 555 5555"
        />
      </div>
    </div>
    <div
      class="_formField_86f2f5 _dateField_0addad"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_birthdate"
      >
        personal_details.birth_date
        <span
          aria-hidden="true"
        >
          *
        </span>
      </label>
      <div
        class="_container_0addad"
      >
        <input
          aria-describedby="helper_text_1235_birthdate"
          aria-invalid="false"
          class="_hiddenInput_0addad"
          id="text-field_1235_birthdate-hidden"
          name="birthDate"
        />
        <input
          autocomplete="bday-day"
          class="_input_0addad"
          id="text-field_1235_birthdate-date"
          maxlength="2"
          name="date"
          placeholder="dd"
          type="number"
          value="27"
        />
         / 
        <input
          autocomplete="bday-month"
          class="_input_0addad"
          id="text-field_1235_birthdate-month"
          maxlength="2"
          name="month"
          placeholder="mm"
          type="number"
          value="2"
        />
         / 
        <input
          autocomplete="bday-year"
          class="_input_0addad"
          id="text-field_1235_birthdate-year"
          maxlength="4"
          name="year"
          placeholder="yyyy"
          type="number"
          value="1985"
        />
      </div>
    </div>
    <div
      class="_formField_86f2f5"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_key1"
      >
        Which number is 2?
        <span
          aria-hidden="true"
        >
          *
        </span>
      </label>
      <div
        class="_container_d97916 _error_d97916"
      >
        <select
          aria-describedby="helper_text_1235_key1"
          aria-invalid="true"
          aria-required="true"
          class="_select_d97916"
          id="text-field_1235_key1"
          name="key1"
          required=""
        >
          <option
            class="_option_d97916"
            disabled=""
            value=""
          >
            personal_details.select_answer
          </option>
          <option
            class="_option_d97916"
            value="1"
          >
            1
          </option>
          <option
            class="_option_d97916"
            value="2"
          >
            2
          </option>
          <option
            class="_option_d97916"
            value="3"
          >
            3
          </option>
        </select>
      </div>
      <div
        class="_helperText_da58e0 _error_da58e0"
        id="helper_text_1235_key1"
      >
        question 1 is invalid
      </div>
    </div>
    <div
      class="_formField_86f2f5"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_key2"
      >
        Is this a question?
      </label>
      <div
        id="text-field_1235_key2"
      >
        <div
          class="_radio_854545 _error_854545"
        >
          <input
            aria-describedby="helper_text_1235_key2"
            id="text-field_1235_key20"
            name="key2"
            type="radio"
            value="Yes"
          />
          <label
            for="text-field_1235_key20"
          >
            Yes
          </label>
        </div>
        <div
          class="_radio_854545 _error_854545"
        >
          <input
            aria-describedby="helper_text_1235_key2"
            checked=""
            id="text-field_1235_key21"
            name="key2"
            type="radio"
            value="No"
          />
          <label
            for="text-field_1235_key21"
          >
            No
          </label>
        </div>
      </div>
      <div
        class="_helperText_da58e0 _error_da58e0"
        id="helper_text_1235_key2"
      >
        Invalid answer
      </div>
    </div>
    <div
      class="_formField_86f2f5 _checkbox_a98c3a _error_a98c3a"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_ccc"
      >
        Check this off.
        <span
          aria-hidden="true"
        >
          *
        </span>
      </label>
      <div
        class="_row_a98c3a"
      >
        <input
          aria-describedby="helper_text_1235_ccc"
          aria-required="true"
          checked=""
          id="text-field_1235_ccc"
          name="ccc"
          type="checkbox"
          value="CheckMe"
        />
        <label
          for="text-field_1235_ccc"
        >
          <span
            aria-hidden="true"
            role="presentation"
          >
            *
          </span>
          CheckMe
        </label>
      </div>
      <div
        class="_helperText_da58e0 _error_da58e0"
        id="helper_text_1235_ccc"
      >
        No way Jose
      </div>
    </div>
    <button
      aria-disabled="false"
      class="_button_f8f296 _continue_8a9484 _primary_f8f296 _fullWidth_f8f296 _large_f8f296"
      type="submit"
    >
      <span>
        personal_details.continue
      </span>
    </button>
  </form>
</div>
`;

exports[`<PersonalDetailsForm> > Renders without crashing 1`] = `
<div>
  <form
    data-testid="personal_details-form"
    novalidate=""
  >
    <h2
      class="_title_8a9484"
    >
      personal_details.title
    </h2>
    <div
      class="_formField_86f2f5 _textField_c799b0"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_firstname"
      >
        personal_details.fist_name
        <span
          aria-hidden="true"
        >
          *
        </span>
      </label>
      <div
        class="_container_859b20"
      >
        <input
          aria-describedby="helper_text_1235_firstname"
          aria-invalid="false"
          aria-required="true"
          autocomplete="given-name"
          class="_input_859b20"
          id="text-field_1235_firstname"
          name="firstName"
          placeholder="personal_details.fist_name"
          required=""
          type="text"
          value="Vince"
        />
      </div>
    </div>
    <div
      class="_formField_86f2f5 _textField_c799b0"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_lastname"
      >
        personal_details.last_name
        <span
          aria-hidden="true"
        >
          *
        </span>
      </label>
      <div
        class="_container_859b20"
      >
        <input
          aria-describedby="helper_text_1235_lastname"
          aria-invalid="false"
          aria-required="true"
          autocomplete="family-name"
          class="_input_859b20"
          id="text-field_1235_lastname"
          name="lastName"
          placeholder="personal_details.last_name"
          required=""
          type="text"
          value="Guy"
        />
      </div>
    </div>
    <div
      class="_formField_86f2f5 _textField_c799b0"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_companyname"
      >
        personal_details.company_name
      </label>
      <div
        class="_container_859b20"
      >
        <input
          aria-describedby="helper_text_1235_companyname"
          aria-invalid="false"
          aria-required="false"
          autocomplete="organization"
          class="_input_859b20"
          id="text-field_1235_companyname"
          name="companyName"
          placeholder="personal_details.company_name"
          type="text"
          value="JW Player"
        />
      </div>
    </div>
    <div
      class="_formField_86f2f5 _textField_c799b0"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_address"
      >
        personal_details.address
        <span
          aria-hidden="true"
        >
          *
        </span>
      </label>
      <div
        class="_container_859b20"
      >
        <input
          aria-describedby="helper_text_1235_address"
          aria-invalid="false"
          aria-required="true"
          autocomplete="address-line1"
          class="_input_859b20"
          id="text-field_1235_address"
          name="address"
          placeholder="personal_details.address"
          required=""
          type="text"
          value="123 Nowhere St."
        />
      </div>
    </div>
    <div
      class="_formField_86f2f5 _textField_c799b0"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_address2"
      >
        personal_details.address2
      </label>
      <div
        class="_container_859b20"
      >
        <input
          aria-describedby="helper_text_1235_address2"
          aria-invalid="false"
          aria-required="false"
          autocomplete="address-line2"
          class="_input_859b20"
          id="text-field_1235_address2"
          name="address2"
          placeholder="personal_details.address2"
          type="text"
          value="Apt 1W"
        />
      </div>
    </div>
    <div
      class="_formField_86f2f5 _textField_c799b0"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_city"
      >
        personal_details.city
        <span
          aria-hidden="true"
        >
          *
        </span>
      </label>
      <div
        class="_container_859b20"
      >
        <input
          aria-describedby="helper_text_1235_city"
          aria-invalid="false"
          aria-required="true"
          autocomplete="address-level2"
          class="_input_859b20"
          id="text-field_1235_city"
          name="city"
          placeholder="personal_details.city"
          required=""
          type="text"
          value="Chicago"
        />
      </div>
    </div>
    <div
      class="_formField_86f2f5 _textField_c799b0"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_state"
      >
        personal_details.state
        <span
          aria-hidden="true"
        >
          *
        </span>
      </label>
      <div
        class="_container_859b20"
      >
        <input
          aria-describedby="helper_text_1235_state"
          aria-invalid="false"
          aria-required="true"
          autocomplete="address-level1"
          class="_input_859b20"
          id="text-field_1235_state"
          name="state"
          placeholder="personal_details.state"
          required=""
          type="text"
          value="IL"
        />
      </div>
    </div>
    <div
      class="_formField_86f2f5 _textField_c799b0"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_postcode"
      >
        personal_details.post_code
        <span
          aria-hidden="true"
        >
          *
        </span>
      </label>
      <div
        class="_container_859b20"
      >
        <input
          aria-describedby="helper_text_1235_postcode"
          aria-invalid="false"
          aria-required="true"
          autocomplete="postal-code"
          class="_input_859b20"
          id="text-field_1235_postcode"
          name="postCode"
          placeholder="personal_details.post_code"
          required=""
          type="text"
          value="60601"
        />
      </div>
    </div>
    <div
      class="_formField_86f2f5 _textField_c799b0"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_phonenumber"
      >
        personal_details.phone_number
        <span
          aria-hidden="true"
        >
          *
        </span>
      </label>
      <div
        class="_container_859b20"
      >
        <input
          aria-describedby="helper_text_1235_phonenumber"
          aria-invalid="false"
          aria-required="true"
          class="_input_859b20"
          id="text-field_1235_phonenumber"
          name="phoneNumber"
          placeholder="personal_details.phone_number"
          required=""
          type="text"
          value="+1 555 555 5555"
        />
      </div>
    </div>
    <div
      class="_formField_86f2f5 _dateField_0addad"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_birthdate"
      >
        personal_details.birth_date
        <span
          aria-hidden="true"
        >
          *
        </span>
      </label>
      <div
        class="_container_0addad"
      >
        <input
          aria-describedby="helper_text_1235_birthdate"
          aria-invalid="false"
          class="_hiddenInput_0addad"
          id="text-field_1235_birthdate-hidden"
          name="birthDate"
        />
        <input
          autocomplete="bday-day"
          class="_input_0addad"
          id="text-field_1235_birthdate-date"
          maxlength="2"
          name="date"
          placeholder="dd"
          type="number"
          value="27"
        />
         / 
        <input
          autocomplete="bday-month"
          class="_input_0addad"
          id="text-field_1235_birthdate-month"
          maxlength="2"
          name="month"
          placeholder="mm"
          type="number"
          value="2"
        />
         / 
        <input
          autocomplete="bday-year"
          class="_input_0addad"
          id="text-field_1235_birthdate-year"
          maxlength="4"
          name="year"
          placeholder="yyyy"
          type="number"
          value="1985"
        />
      </div>
    </div>
    <div
      class="_formField_86f2f5"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_key1"
      >
        Which number is 2?
        <span
          aria-hidden="true"
        >
          *
        </span>
      </label>
      <div
        class="_container_d97916"
      >
        <select
          aria-describedby="helper_text_1235_key1"
          aria-invalid="false"
          aria-required="true"
          class="_select_d97916"
          id="text-field_1235_key1"
          name="key1"
          required=""
        >
          <option
            class="_option_d97916"
            disabled=""
            value=""
          >
            personal_details.select_answer
          </option>
          <option
            class="_option_d97916"
            value="1"
          >
            1
          </option>
          <option
            class="_option_d97916"
            value="2"
          >
            2
          </option>
          <option
            class="_option_d97916"
            value="3"
          >
            3
          </option>
        </select>
      </div>
    </div>
    <div
      class="_formField_86f2f5"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_key2"
      >
        Is this a question?
      </label>
      <div
        id="text-field_1235_key2"
      >
        <div
          class="_radio_854545"
        >
          <input
            aria-describedby="helper_text_1235_key2"
            id="text-field_1235_key20"
            name="key2"
            type="radio"
            value="Yes"
          />
          <label
            for="text-field_1235_key20"
          >
            Yes
          </label>
        </div>
        <div
          class="_radio_854545"
        >
          <input
            aria-describedby="helper_text_1235_key2"
            checked=""
            id="text-field_1235_key21"
            name="key2"
            type="radio"
            value="No"
          />
          <label
            for="text-field_1235_key21"
          >
            No
          </label>
        </div>
      </div>
    </div>
    <div
      class="_formField_86f2f5 _checkbox_a98c3a"
    >
      <label
        class="_label_86f2f5"
        for="text-field_1235_ccc"
      >
        Check this off.
        <span
          aria-hidden="true"
        >
          *
        </span>
      </label>
      <div
        class="_row_a98c3a"
      >
        <input
          aria-describedby="helper_text_1235_ccc"
          aria-required="true"
          checked=""
          id="text-field_1235_ccc"
          name="ccc"
          type="checkbox"
          value="CheckMe"
        />
        <label
          for="text-field_1235_ccc"
        >
          <span
            aria-hidden="true"
            role="presentation"
          >
            *
          </span>
          CheckMe
        </label>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="_button_f8f296 _continue_8a9484 _primary_f8f296 _fullWidth_f8f296 _large_f8f296"
      type="submit"
    >
      <span>
        personal_details.continue
      </span>
    </button>
  </form>
</div>
`;
